--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-recursion = "1.0.2"
 bytes = "1.3.0"
 clap = { version = "4.0.29", features = ["derive"] }
+clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
 exponential-backoff = "1.1.0"
 futures = "0.3.25"
 google-drive3 = { git = "https://github.com/prasmussen/google-apis-rs", branch = "resumable-fix" }
